--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,5 @@ set(root ${CMAKE_CURRENT_SOURCE_DIR})
 #add_subdirectory(${root}/library/library.cmake)
 include(${root}/library/library.cmake)
 include(${root}/app/app.cmake)
+
+message(STATUS "${LIBRARY_API_INCLUDE}")
