--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project (Borack_Library)
 
 set(root ${CMAKE_CURRENT_SOURCE_DIR})
 
+add_compile_options(-std=c++11)
+
 #add_subdirectory(${root}/library/library.cmake)
 include(${root}/library/library.cmake)
 include(${root}/app/app.cmake)
